# goslims2gmt

./: get_data.sh  make_all_gmt_files.sh  make_gmt_file.py  pyproject.toml  readme.md
results/: bp_goslim.gmt  cc_goslim.gmt  mf_goslim.gmt  timestamp.txt
